force-app/main/default/objects/redwing__Question_Line__c/redwing__Question_Line__c.object-meta.xml
<CustomObject>
    <label>Quiz Page</label>
    <nameField>
        <label>Quiz Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quiz Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>