force-app/main/default/objects/redwing__Question_Line__c/fields/redwing__Question_Bank_Import_Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question_Bank_Import_Type__c</fullName>
    <label>Question Bank Import Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Dynamic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>