force-app/main/default/objects/redwing__Question_Line__c/fields/redwing__Question_Display_Count__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question_Display_Count__c</fullName>
    <label>Question Display Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>