force-app/main/default/objects/redwing__Question_Line__c/fields/redwing__Quiz__c.field-meta.xml
<CustomField>
    <fullName>redwing__Quiz__c</fullName>
    <label>Quiz</label>
    <referenceTo>redwing__Quiz__c</referenceTo>
    <relationshipLabel>Quiz Pages</relationshipLabel>
    <relationshipName>Question_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>