force-app/main/default/objects/redwing__Question_Line__c/fields/redwing__Total_Questions__c.field-meta.xml
<CustomField>
    <fullName>redwing__Total_Questions__c</fullName>
    <label>Total Questions</label>
    <summaryForeignKey>redwing__Question__c.redwing__Question_Line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>